packages/scaml.1.2.0/tests/fail/op_pack_failwith.ml
(* file: lambdafail.ml *)
open SCaml

type func_t = (nat -> nat)
let f : func_t = fun _ -> (failwith "oops" : nat)
